# src/Foundry.WebApi/openapi/v1.json
@@ -3176,8 +3176,7 @@
         "type": "object",
         "properties": {
           "workerRunId": {
-            "type": "string",
-            "format": "uuid"
+            "$ref": "#/components/schemas/WorkerRunId"
           },
           "issueId": {
             "type": "string",
@@ -3270,6 +3269,15 @@
           },
           "hasStoredLog": {
             "type": "boolean"
+          }
+        }
+      },
+      "WorkerRunId": {
+        "type": "object",
+        "properties": {
+          "value": {
+            "type": "string",
+            "format": "uuid"
           }
         }
       }
